[package]
name = "bar-stats-wasm"
version = "0.1.0"
authors = ["Anoromi <and.zagorulko@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
bounding_box = []
clusterize = []


[dependencies]
wasm-bindgen = "0.2.92"
rayon = "1.8"
wasm-bindgen-rayon = "1.2"

# wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
rstar = "0.12.0"
yata = { version = "0.7.0", features = ["period_type_u32"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
